refactor: 도메인 객체와 DTO 역할 분리 및 의존성 개선