@@ -4,10 +4,9 @@ import janggi.domain.route.Path;
 import janggi.domain.route.Paths;
 import janggi.domain.piece.Piece;
 import janggi.domain.piece.PieceType;
-import janggi.domain.piece.PieceVO;
+import janggi.dto.PieceDTO;
 import janggi.domain.game.Side;
 import janggi.dto.PlayerDTO;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -60,34 +59,31 @@ public class Board {
         initialBoard.put(new Position(r, c), new Piece(s, t, n));
     }
 
-    //    !------------임시---------------!
-    public Map<Position, PieceVO> getPiecePosition() {
-        Map<Position, PieceVO> piecePositions = new HashMap<>(piecePosition.size());
-        this.piecePosition.forEach((position, piece) -> piecePositions.put(position, piece.mapToVO()));
-        return Collections.unmodifiableMap(piecePositions);
+    public Map<Position, Piece> getPiecePosition() {
+        return Map.copyOf(this.piecePosition);
     }
 
     public List<Position> calculateDestinations(Position currentPosition) {
         Piece piece = piecePosition.get(currentPosition);
         Paths moveablePaths = piece.calculatePaths(currentPosition);
-        Map<Position, PieceVO> boardState = generateStateByPaths(moveablePaths);
+        Map<Position, Piece> boardState = generateStateByPaths(moveablePaths);
 
         return piece.determineDestinations(moveablePaths, boardState);
     }
 
-    private Map<Position, PieceVO> generateStateByPaths(Paths moveablePaths) {
-        Map<Position, PieceVO> boardState = new HashMap<>();
+    private Map<Position, Piece> generateStateByPaths(Paths moveablePaths) {
+        Map<Position, Piece> boardState = new HashMap<>();
         moveablePaths.forEach(path -> {
             generateStateByPath(path, boardState);
         });
         return boardState;
     }
 
-    private void generateStateByPath(Path path, Map<Position, PieceVO> boardState) {
+    private void generateStateByPath(Path path, Map<Position, Piece> boardState) {
         path.forEach(position -> {
             Piece piece = piecePosition.get(position);
             if (piece != null) {
-                boardState.put(position, piece.mapToVO());
+                boardState.put(position, piece);
             }
         });
     }
@@ -102,7 +98,7 @@ public class Board {
     }
 
     public boolean isThereOwnPiece(Position selected, PlayerDTO currentPlayer) {
-        PieceVO piece = piecePosition.get(selected).mapToVO();
+        PieceDTO piece = piecePosition.get(selected).mapToVO();
         Side pieceSide = piece.side();
         Side playerSide = currentPlayer.side();
         return pieceSide.isSameSide(playerSide);
